Updates to code structure, adding new CBI workflow (GEE)

--- a/Aim2/code/Python/_figures.ipynb
+++ b/Aim2/code/Python/_figures.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ebbcf5c5-8dc8-4d52-aa3e-c89ffc3363f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ready !\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Manuscript figures\n",
@@ -43,36 +51,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f57cfce0-1871-4d5c-8c9c-026d2b4a1930",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Fire_ID', 'Fire_Name', 'Final_Acres', 'INCIDENT_ID', 'START_YEAR',\n",
+       "       'DISCOVERY_DATE', 'WF_CESSATION_DATE', 'ICS_ACRES', 'geometry'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load fire perimeter data\n",
-    "fp = os.path.join(projdir,'data/spatial/mod/srm_fire_census_2017_to_2023_ics_perims_subset.gpkg')\n",
+    "fp = os.path.join(projdir,'data/spatial/mod/srm_fire_census_2017_to_2023_subset.gpkg')\n",
     "fires = gpd.read_file(fp)\n",
     "fires.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "80b216d3-a375-4b2f-981a-c6b95012ea16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['grid_index', 'grid_area', 'afd_count', 'unique_days', 'overlap',\n",
+       "       'frp_csum', 'frp_max', 'frp_min', 'frp_mean', 'frp_p90', 'frp_p95',\n",
+       "       'frp_p97', 'frp_p99', 'frp_first', 'day_max_frp', 'dt_max_frp',\n",
+       "       'first_obs_date', 'last_obs_date', 't4_max', 't4_mean', 't5_max',\n",
+       "       't5_mean', 'day_count', 'night_count', 'frp_max_day', 'frp_max_night',\n",
+       "       'frp_csum_day', 'frp_csum_night', 'frp_mean_day', 'frp_mean_night',\n",
+       "       'frp_p90_day', 'frp_p90_night', 'frp_p95_day', 'frp_p95_night',\n",
+       "       'frp_p97_day', 'frp_p97_night', 'frp_p99_day', 'frp_p99_night',\n",
+       "       'frp_first_day', 'frp_first_night', 'Fire_ID', 'Fire_Name', 'geometry'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load the frp grid\n",
-    "fp = os.path.join(projdir,'data/spatial/mod/VIIRS/viirs_snpp_jpss1_afd_latlon_aspenfires_pixar_gridstats.gpkg')\n",
+    "fp = os.path.join(projdir,'data/spatial/mod/VIIRS/viirs_snpp_jpss1_afd_latlon_fires_pixar_gridstats.gpkg')\n",
     "grid = gpd.read_file(fp)\n",
     "grid.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "38f8fcdc-d3fa-4e8c-867b-3f3a120f00ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['na_l3name', 'na_l3code', 'geometry'], dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fp = os.path.join(projdir,'data/spatial/raw/boundaries/na_cec_eco_l3_west.gpkg')\n",
     "ecol3 = gpd.read_file(fp)\n",
@@ -81,63 +133,94 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60888835-4a45-469b-8817-2a54f35adf5d",
+   "cell_type": "markdown",
+   "id": "0fca3225-c562-4101-b722-ea4cc1518ba9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Figure 1A. Map of the Southern Rockies"
+    "## Figure 1A. Map of the Southern Rockies\n",
+    "\n",
+    "Figure 1. Study region and wildfire events. (A) Map of the SRM showing the locations of wildfire events with >1% pre-fire aspen cover. Point size represents the burned area (ha), color scale represents the percentage of aspen forest cover; (B) annual burned area (ha); (C) distribution of fire size (or other statistics ??)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "09b5ac31-617b-441e-a94a-47d820bc6783",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count       100.000000\n",
+      "mean       6662.475118\n",
+      "std       19547.772302\n",
+      "min          40.468600\n",
+      "25%         290.564548\n",
+      "50%         666.113156\n",
+      "75%        3042.328176\n",
+      "max      138295.370210\n",
+      "Name: FINAL_HA, dtype: float64\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'pct_cover'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/miniconda3/envs/aspen-fire/lib/python3.10/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'pct_cover'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m centroid \u001b[38;5;241m=\u001b[39m fires_\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m     10\u001b[0m centroid[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgeometry\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m centroid\u001b[38;5;241m.\u001b[39mgeometry\u001b[38;5;241m.\u001b[39mcentroid\n\u001b[0;32m---> 11\u001b[0m centroid[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maspen_size\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mcentroid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpct_cover\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m5\u001b[39m  \n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# # do some scaling (area weighted aspen cover)\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# scaler = MinMaxScaler(feature_range=(0, 100))  # Normalize to 0–100\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# centroid['pct_cover_wt'] = centroid['pct_cover'] * centroid['FINAL_HA']  # Weighted by fire size\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# centroid['pct_cover_wt_nm'] = scaler.fit_transform(centroid[['pct_cover_wt']])\u001b[39;00m\n\u001b[1;32m     18\u001b[0m scaler \u001b[38;5;241m=\u001b[39m MinMaxScaler(feature_range\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m100\u001b[39m))  \u001b[38;5;66;03m# Marker sizes between 10 and 200\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/miniconda3/envs/aspen-fire/lib/python3.10/site-packages/geopandas/geodataframe.py:1474\u001b[0m, in \u001b[0;36mGeoDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1468\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[1;32m   1469\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   1470\u001b[0m \u001b[38;5;124;03m    If the result is a column containing only 'geometry', return a\u001b[39;00m\n\u001b[1;32m   1471\u001b[0m \u001b[38;5;124;03m    GeoSeries. If it's a DataFrame with any columns of GeometryDtype,\u001b[39;00m\n\u001b[1;32m   1472\u001b[0m \u001b[38;5;124;03m    return a GeoDataFrame.\u001b[39;00m\n\u001b[1;32m   1473\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1474\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getitem__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1475\u001b[0m     \u001b[38;5;66;03m# Custom logic to avoid waiting for pandas GH51895\u001b[39;00m\n\u001b[1;32m   1476\u001b[0m     \u001b[38;5;66;03m# result is not geometry dtype for multi-indexes\u001b[39;00m\n\u001b[1;32m   1477\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   1478\u001b[0m         pd\u001b[38;5;241m.\u001b[39mapi\u001b[38;5;241m.\u001b[39mtypes\u001b[38;5;241m.\u001b[39mis_scalar(key)\n\u001b[1;32m   1479\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m key \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1482\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_geometry_type(result)\n\u001b[1;32m   1483\u001b[0m     ):\n",
+      "File \u001b[0;32m/opt/miniconda3/envs/aspen-fire/lib/python3.10/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m/opt/miniconda3/envs/aspen-fire/lib/python3.10/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'pct_cover'"
+     ]
+    }
+   ],
    "source": [
     "# Generate centroids\n",
-    "fires_ = fires[fires['NIFC_ID'].isin(grid['Fire_ID'].unique())]\n",
-    "fires_['NIFC_ACRES'] = pd.to_numeric(fires_['NIFC_ACRES'], errors='coerce')\n",
-    "fires_['FINAL_KM2'] = fires_['NIFC_ACRES'] * 0.00404686\n",
-    "fires_['FINAL_HA'] = fires_['NIFC_ACRES']* 0.404686\n",
-    "print(fires_['FINAL_HA'].describe())\n",
+    "fires = fires[fires['Fire_ID'].isin(grid['Fire_ID'].unique())]\n",
+    "fires['ICS_ACRES'] = pd.to_numeric(fires_['ICS_ACRES'], errors='coerce')\n",
+    "fires['FINAL_KM2'] = fires['ICS_ACRES'] * 0.00404686\n",
+    "fires['FINAL_HA'] = fires['ICS_ACRES']* 0.404686\n",
+    "print(fires['FINAL_HA'].describe())\n",
     "\n",
     "# Get the centroid of fires\n",
-    "centroid = fires_.copy()\n",
+    "centroid = fires.copy()\n",
     "centroid['geometry'] = centroid.geometry.centroid\n",
-    "centroid['aspen_size'] = centroid['pct_cover'] * 5  \n",
     "\n",
-    "# # do some scaling (area weighted aspen cover)\n",
-    "# scaler = MinMaxScaler(feature_range=(0, 100))  # Normalize to 0–100\n",
-    "# centroid['pct_cover_wt'] = centroid['pct_cover'] * centroid['FINAL_HA']  # Weighted by fire size\n",
-    "# centroid['pct_cover_wt_nm'] = scaler.fit_transform(centroid[['pct_cover_wt']])\n",
-    "\n",
+    "# scale fire size attribute for display\n",
     "scaler = MinMaxScaler(feature_range=(10, 100))  # Marker sizes between 10 and 200\n",
     "centroid['fire_size'] = scaler.fit_transform(centroid[['FINAL_HA']]) * 3\n",
     "\n",
     "# subset to SRM\n",
-    "centroid_srm = centroid[centroid['na_l3name'] == 'Southern Rockies']\n",
-    "ecol3_srm = ecol3[ecol3['na_l3name'] == 'Southern Rockies']\n",
+    "srm = ecol3[ecol3['na_l3name'] == 'Southern Rockies']\n",
     "\n",
     "# Ensure the same projection\n",
-    "centroid_srm = centroid_srm.to_crs(4326)\n",
-    "ecol3_srm = ecol3_srm.to_crs(4326)\n",
+    "centroid = centroid_srm.to_crs(4326)\n",
+    "srm = srm.to_crs(4326)\n",
     "\n",
     "# plot it\n",
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
     "\n",
-    "ecol3_srm.plot(ax=ax, edgecolor='black', linewidth=0.8, color='none')\n",
-    "\n",
-    "centroid_srm.plot(\n",
+    "srm.plot(ax=ax, edgecolor='black', linewidth=0.8, color='none')\n",
+    "centroid.plot(\n",
     "    ax=ax, \n",
-    "    markersize=centroid_srm['fire_size'],  # Use normalized marker size\n",
+    "    markersize=centroid['fire_size'],  # Use normalized marker size\n",
     "    column='pct_cover', cmap='viridis', \n",
     "    legend=False, alpha=0.6)\n",
     "\n",
     "# Add colorbar for aspen percent cover\n",
-    "norm = mcolors.Normalize(vmin=centroid_srm['pct_cover'].min(), vmax=centroid_srm['pct_cover'].max())\n",
+    "norm = mcolors.Normalize(vmin=centroid[''].min(), vmax=centroid[''].max())\n",
     "sm = ScalarMappable(cmap='viridis', norm=norm)\n",
     "sm.set_array([])\n",
     "cbar = fig.colorbar(sm, ax=ax, shrink=0.7)\n",
