Updates to FRP-CBI and Tree Table summaries, code structure, file management

--- a/Aim2/code/Python/04d_GEE-CBI_Summary.ipynb
+++ b/Aim2/code/Python/04d_GEE-CBI_Summary.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "65fa740f-64e9-476f-8ef4-07e2a0418f32",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,60 @@
      "text": [
       "Export to Earth Engine Asset started!\n",
       "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n"
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Export completed successfully !!!!\n"
      ]
     }
    ],
