Mostly updates to the TreeMap workflow and integration of climate+topo

--- a/Aim2/code/Python/04a_TreeMap_FIA-Prep.ipynb
+++ b/Aim2/code/Python/04a_TreeMap_FIA-Prep.ipynb
@@ -260,13 +260,7 @@
    "source": [
     "# create a forest/non-forest grid\n",
     "forest_mask = xr.where(~np.isnan(tmid_da), 1, 0)\n",
-    "\n",
-    "# Save as a GeoTIFF\n",
-    "out_fp = os.path.join(projdir, \"data/spatial/mod/USFS/TreeMap_2016_forestmask.tif\")\n",
-    "forest_mask.rio.to_raster(out_fp, compress='zstd', zstd_level=9, dtype='uint16', driver='GTiff')\n",
-    "print(f\"Saved multi-band raster to: {out_fp}\")\n",
-    "\n",
-    "# calculate the total grid pixels\n",
+    "# calculate the total forested pixels\n",
     "# see __functions.py 'compute_band_stats'\n",
     "forest_pct = compute_band_stats(grid, forest_mask, 'grid_index', attr='constant')\n",
     "forest_pct.rename(columns={\n",
@@ -281,7 +275,15 @@
     "print(f\"\\n[{round(n_forest/len(grid)*100,2)}%] predominantly forest grids.\")\n",
     "print(f\"\\n{forest_pct.head(3)}\")\n",
     "\n",
-    "del forest_mask\n",
+    "# Save as a GeoTIFF\n",
+    "out_fp = os.path.join(projdir, \"data/spatial/mod/USFS/TreeMap_2016_forestmask.tif\")\n",
+    "forest_mask.rio.to_raster(out_fp, compress='zstd', zstd_level=9, dtype='uint16', driver='GTiff')\n",
+    "print(f\"Saved multi-band raster to: {out_fp}\")\n",
+    "\n",
+    "# Join to the grid data\n",
+    "grid = grid.merge(forest_pct, on='grid_index', how='left')\n",
+    "\n",
+    "del forest_mask, forest_pct\n",
     "gc.collect() # clean up"
    ]
   }
