Updates to INLA models

--- a/Aim2/code/Python/04b_TreeMap_FIA-TreeTable.ipynb
+++ b/Aim2/code/Python/04b_TreeMap_FIA-TreeTable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c3d482be-361d-4286-b949-6680bf24babb",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "af7d2100-d318-41ce-970d-7686f0359b88",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8ab27165-81d1-4bb0-892a-168bc8353a89",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "28"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8536a925-ffa9-48f5-b879-6c55d80ca431",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "16"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "133ff9f1-a8eb-4918-ab14-3daf2ce599a5",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
       "10   1.0  11.0      NaN  \n",
       "11   1.0  12.0      NaN  \n",
       "\n",
-      "Total elapsed time: 1.03 minutes.\n",
+      "Total elapsed time: 0.84 minutes.\n",
       "\n",
       "~~~~~~~~~~\n",
       "\n"
@@ -332,7 +332,7 @@
        "44"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "10a6d389-2d45-4fe8-a5a0-70fc813b29d5",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "3739f114-d55d-47af-81fd-a8572393af93",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "65f6f93a-a69d-4a9b-b98c-d4f1442fb504",
    "metadata": {},
    "outputs": [],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e4d2c733-4373-47c4-9d36-985a21f47e7c",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
        "       'southern crab apple'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b3b718c5-ad1c-44b6-9af9-0bba8e2cac69",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
        " 'red pine']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "eff6f13a-d0c4-4ccc-8bb3-ac1a895b0eff",
    "metadata": {},
    "outputs": [
@@ -769,7 +769,7 @@
        "0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "4c040682-cbbe-4886-89a1-b6ce9cbcbe78",
    "metadata": {},
    "outputs": [
@@ -834,10 +834,10 @@
     {
      "data": {
       "text/plain": [
-       "822"
+       "820"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "52f17ffb-dc8f-4a7d-aa14-e110d8ca1bb7",
    "metadata": {},
    "outputs": [
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "f5554c05-53bf-4c68-bdf7-6f0e80ee075b",
    "metadata": {},
    "outputs": [
@@ -995,7 +995,7 @@
        "31"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "b99e0ef3-9891-4180-9a21-7fc722a7b88f",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1061,7 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "626e1040-4e44-46ba-9a5b-748311263df4",
    "metadata": {},
    "outputs": [
@@ -1112,7 +1112,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "929d6b12-1742-4750-b51e-70c6958013c9",
    "metadata": {},
    "outputs": [
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "00c865ca-c8bd-4bd7-b779-6d91313dcbad",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
        "0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "cfde08ff-da3c-44bc-96bd-cd4cd5895ae1",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1234,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "1bd180ac-7fac-483b-9608-d7d4920804e5",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1370,7 @@
        "4        0.002080        0.000000         0.002080      7.535196  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,6 +1401,12 @@
     "                           'tpa_live_total','tpa_dead_total','tpa_ld_total','shannon_h_mn']]\n",
     "# merge back to the grid data\n",
     "grid_tm_spp = grid_tm_spp.merge(grid_totals, on='grid_index', how='left')\n",
+    "\n",
+    "# calculate the QMD\n",
+    "# ensure 'balive' and 'tpa' columns exist in Dom and are not null or zero\n",
+    "grid_tm_spp = grid_tm_spp.dropna(subset=['ba_ld', 'tpa_ld'])  # Drop rows with missing values\n",
+    "grid_tm_spp = grid_tm_spp[grid_tm_spp['tpa_ld'] > 0]  # Remove rows with zero trees per acre\n",
+    "grid_tm_spp['qmd'] = np.sqrt((grid_tm_spp['ba_ld'] * 144) / (np.pi * grid_tm_spp['tpa_ld']))\n",
     "\n",
     "# calculate the species proportions (for live/dead)\n",
     "# dominance (live/dead basal area)\n",
