Finalizing baseline model (predominant forest type)
BYM2 spatial model with KNN adjacency structure

--- a/Aim2/code/Python/04d_GEE-GridMet.ipynb
+++ b/Aim2/code/Python/04d_GEE-GridMet.ipynb
@@ -263,8 +263,8 @@
    ],
    "source": [
     "# select our variables of interest:\n",
-    "# 1. Vapor Pressure Deficit and 2. Energy Release Component\n",
-    "gridmet = gridmet.select(['vpd','erc'])\n",
+    "# 1. Vapor Pressure Deficit, Energy Release Component\n",
+    "gridmet = gridmet.select(['vpd','erc','tmmx','vs',''])\n",
     "print(gridmet.first().bandNames().getInfo())"
    ]
   },
