--- a/Aim2/code/Python/04d_GEE-TreeMap.ipynb
+++ b/Aim2/code/Python/04d_GEE-TreeMap.ipynb
@@ -47,46 +47,14 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <style>\n",
-       "                .geemap-dark {\n",
-       "                    --jp-widgets-color: white;\n",
-       "                    --jp-widgets-label-color: white;\n",
-       "                    --jp-ui-font-color1: white;\n",
-       "                    --jp-layout-color2: #454545;\n",
-       "                    background-color: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-dark .jupyter-button {\n",
-       "                    --jp-layout-color3: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab {\n",
-       "                    background-color: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab .jupyter-button {\n",
-       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "            </style>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TreeMap bands available for analysis:\n",
-      "\n",
-      "['ALSTK', 'BALIVE', 'CANOPYPCT', 'CARBON_D', 'CARBON_DWN', 'CARBON_L', 'DRYBIO_D', 'DRYBIO_L', 'FLDSZCD', 'FLDTYPCD', 'FORTYPCD', 'GSSTK', 'QMD_RMRS', 'SDIPCT_RMRS', 'STANDHT', 'STDSZCD', 'TPA_DEAD', 'TPA_LIVE', 'Value', 'VOLBFNET_L', 'VOLCFNET_D', 'VOLCFNET_L']\n"
+     "ename": "NameError",
+     "evalue": "name 'ee' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# load and prep the USFS TreeMap from GEE\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m treemap \u001b[38;5;241m=\u001b[39m \u001b[43mee\u001b[49m\u001b[38;5;241m.\u001b[39mImageCollection(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUSFS/GTAC/TreeMap/v2016\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTreeMap bands available for analysis:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mtreemap\u001b[38;5;241m.\u001b[39mfirst()\u001b[38;5;241m.\u001b[39mbandNames()\u001b[38;5;241m.\u001b[39mgetInfo()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ee' is not defined"
      ]
     }
    ],
