Updates to R-INLA predom. species model

--- a/Aim2/code/Python/04d_GEE-CBI_Summary.ipynb
+++ b/Aim2/code/Python/04d_GEE-CBI_Summary.ipynb
@@ -156,6 +156,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "9605fca7-d939-4562-8de3-bdd7823dedff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type': 'Projection', 'crs': 'EPSG:4326', 'transform': [0.00026949458523585647, 0, -108.08700178430067, 0, -0.00026949458523585647, 37.668875145927075]}\n",
+      "{'type': 'Projection', 'crs': 'EPSG:4326', 'transform': [1, 0, 0, 0, 1, 0]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cbi_image_list[0].projection().getInfo())\n",
+    "print(grid.first().geometry().projection().getInfo())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "9f4ebf7f-6768-46a2-a80b-69e6cf19851d",
    "metadata": {},
@@ -212,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "cd1c6684-5c3a-4de6-9b70-fc707e34a38f",
    "metadata": {},
    "outputs": [
@@ -253,7 +307,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c227f24dc934dfdac79dc445a1eb684",
+       "model_id": "b429c6e5f1e04cc6b6fbe09b759246f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -261,7 +315,7 @@
        "Map(center=[0, 0], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=SearchDataGUI(childr…"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,12 +324,15 @@
     "# create a forest mask and check on it\n",
     "forest = treemap.select('FORTYPCD').mosaic().gt(0)\n",
     "# grab a CBI image and update the mask to check\n",
-    "test = cbi_image_list[0].updateMask(forest)\n",
+    "test = ee.ImageCollection.fromImages(cbi_image_list)\n",
+    "# .updateMask(forest)\n",
+    "\n",
     "# Initialize a map\n",
     "Map = geemap.Map()\n",
     "Map.addLayerControl()\n",
     "Map.addLayer(forest)\n",
     "Map.addLayer(test)\n",
+    "Map.addLayer(grid)\n",
     "Map"
    ]
   },
